fix: center align header

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+header {
+    text-align: center;
+    background-color: burlywood; 
+}
+
 main {
     text-align: center;
 }
@@ -10,4 +15,16 @@ footer {
 pre {
     text-align: left;
     margin-left: 20vw;
+}
+
+ul {
+    padding-inline-start: 40vw;
+}
+
+li {
+    text-align: left;
+}
+
+mark {
+    background-color: yellow;
 }
